Added name as h1 tag within header

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Create a header element  -->
-
+    
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
@@ -21,5 +21,8 @@
     <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+        <header>
+            <h1>Joshua Engebretson</h1>
+        </header>
 </body>
 </html>
