--- a/assignment/index.html
+++ b/assignment/index.html
@@ -24,17 +24,18 @@
         <header>
             <h1>Joshua Engebretson</h1>
         </header>
-        <img src="https://cdn.discordapp.com/attachments/691373216194625569/1053489793864061008/IMG_0003.JPG" alt="Black and white photo of Joshua in a henley and glasses">
+        <img class="headshot" src="https://cdn.discordapp.com/attachments/691373216194625569/1053489793864061008/IMG_0003.JPG" alt="Black and white photo of Joshua in a henley and glasses">
         <div><ul>
+                <p class="list">Fun Facts:</p>
                 <li class="fun-fact">I am a contemporary ballet dancer.</li>
-                <li class="fun-fact">I have a lot of food allergies, including being anaphylactic to peanuts, dairy, and soy.</li>
-                <li class="fun-fact">I enjoy painting miniatures</li>
-                <img src="https://cdn.discordapp.com/attachments/691373216194625569/1077694703132225637/IMG_0652.jpg" alt="Front facing of a miniature painted by Joshua">
-                <img src="https://cdn.discordapp.com/attachments/691373216194625569/1077694702712791200/IMG_0653.jpg" alt="Back facing of a minature painted by Joshua">
+                <li class="fun-fact">I play the cello.</li>
+                <li class="fun-fact">I enjoy painting miniatures, see images below:</li>
             </ul>
+            <img class="miniature" src="https://cdn.discordapp.com/attachments/691373216194625569/1077694703132225637/IMG_0652.jpg" alt="Front facing of a miniature painted by Joshua">
+            <img class="miniature" src="https://cdn.discordapp.com/attachments/691373216194625569/1077694702712791200/IMG_0653.jpg" alt="Back facing of a minature painted by Joshua">
         </div>
         <footer>
-            <p>“Sometimes the best way to solve your own problems is to help someone else” Avatar the Last Airbender</p>
+            <p class="quote">“Sometimes the best way to solve your own problems is to help someone else” Avatar the Last Airbender</p>
         </footer>
 </body>
 </html>
