--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- links to css stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <!-- adds in script source of helloWorld.js-->
+    <script src="helloWorld.js"></script>
+
 </head>
 <body>
     <!-- Create a header element  -->
